--- a/Minio.py/Dockerfile
+++ b/Minio.py/Dockerfile
@@ -9,4 +9,4 @@ RUN python -m pip install --upgrade pip
 RUN pip install -r requirements.txt
 RUN mkdir /app
 WORKDIR /app
-COPY . /app/
+COPY /app /app/
